observability/main/default/objects/Logger_Configuration__mdt/Logger_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Logger Configuration</label>
    <pluralLabel>Logger Configurations</pluralLabel>
</CustomObject>