observability/main/default/objects/Logger_Configuration__mdt/fields/Default_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Default_Log_Level__c</fullName>
    <description>Defines log level for logger instances. Mirrors the LoggingLevel enum within Apex.</description>
    <inlineHelpText>Defines log level for logger instances. Mirrors the LoggingLevel enum within Apex.</inlineHelpText>
    <label>Default Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
                <default>true</default>
                <label>WARN</label>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>FINER</fullName>
            </value>
            <value>
                <fullName>FINEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>