observability/main/default/objects/Logger_Configuration__mdt/fields/Default_Log_Target__c.field-meta.xml
<CustomField>
    <fullName>Default_Log_Target__c</fullName>
    <description>Determines the target for where logs are published.</description>
    <inlineHelpText>Determines the target for where logs are published.</inlineHelpText>
    <label>Default Log Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYSTEM_DEBUG</fullName>
                <label>SYSTEM DEBUG</label>
            </value>
            <value>
                <fullName>PLATFORM_EVENT</fullName>
                <label>PLATFORM EVENT</label>
            </value>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>