observability/main/default/objects/Logger_Configuration__mdt/fields/Log_Target__c.field-meta.xml
<CustomField>
    <fullName>Log_Target__c</fullName>
    <label>Log Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Debug</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>